updated aura gif src

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 
 # Ignore Mac system files
 .DS_store
+/aura/img/._1.gif
+/aura/img/._2.gif
+/aura/img/._3.gif
+/aura/img/._4.gif
+/aura/img/._5.gif
+/aura/img/._6.gif
+/aura/img/._7.gif
+/aura/img/._8.gif
+/aura/img/._9.gif
+/aura/._icon.png
+/aura/._index.html
+/aura/._style.css
